--- a/Alzheimer's Disease Prediction.ipynb
+++ b/Alzheimer's Disease Prediction.ipynb
@@ -2,19 +2,21 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bbf21c89-c1cd-4a4a-ad20-282d2006f2bd",
+   "id": "fbf18d4a-a3e1-4a00-9375-20c8dcbd99c1",
    "metadata": {},
    "source": [
-    "# Alzheimer's Disease Prediction\r\n",
-    "\r\n",
-    "## Dataset Description\r\n",
-    "This dataset contains synthetic but realistic health and lifestyle data for 2,149 patients, with detailed information on demographics, medical history, clinical measurements, cognitive assessments, and Alzheimer's diagnosis status.\r\n",
-    "\r\n",
-    "## Objective\r\n",
-    "The objective of this project is to develop a machine learning model capable of predicting whether a patient is diagnosed with Alzheimer's Disease based on their health, lifestyle, and cognitive characteristics.\r\n",
-    "\r\n",
-    "## Type of Model\r\n",
-    "This will be a supervised learning task using a binary classification model (Diagnosis: 0 = No Alzheimer's, 1 = Alzheimer's).\r\n"
+    "# Alzheimer's Disease Prediction\n",
+    "\n",
+    "## Dataset Description\n",
+    "This dataset contains synthetic but realistic health and lifestyle data for 2,149 patients, with detailed information on demographics, medical history, clinical measurements, cognitive assessments, and Alzheimer's diagnosis status.\n",
+    "\n",
+    "## Objective\n",
+    "The objective of this project is to develop a machine learning model capable of predicting whether a patient is diagnosed with Alzheimer's Disease based on their health, lifestyle, and cognitive characteristics.\n",
+    "\n",
+    "## Type of Model\n",
+    "This will be a supervised learning task using a binary classification model (Diagnosis: 0 = No Alzheimer's, 1 = Alzheimer's).\n",
+    "\n",
+    "GitHub Repo: https://github.com/alfogtz/Alzheimers-Disease-Prediction/tree/main"
    ]
   },
   {
@@ -1203,7 +1205,32 @@
     "- Perform hyperparameter tuning on Random Forest to maximize performance further.\n",
     "- Analyze model explainability using SHAP values or feature importance analysis to better understand which features drive predictions.\n",
     "\n",
-    "This project highlights the importance of cognitive and functional assessments in Alzheimer's prediction and demonstrates the potential of machine learning to support early diagnosis efforts.\n"
+    "This project highlights the importance of cognitive and functional assessments in Alzheimer's prediction and demonstrates the potential of machine learning to support early diagnosis efforts.\n",
+    "\n",
+    "GitHub Repo: https://github.com/alfogtz/Alzheimers-Disease-Prediction/tree/main"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05ef5525-996f-45d0-b2bb-aa8bbefeb981",
+   "metadata": {},
+   "source": [
+    "Dataset Cite\n",
+    "@misc{rabie_el_kharoua_2024,\n",
+    "\n",
+    "title={Alzheimer's Disease Dataset},\n",
+    "\n",
+    "url={https://www.kaggle.com/dsv/8668279},\n",
+    "\n",
+    "DOI={10.34740/KAGGLE/DSV/8668279},\n",
+    "\n",
+    "publisher={Kaggle},\n",
+    "\n",
+    "author={Rabie El Kharoua},\n",
+    "\n",
+    "year={2024}\n",
+    "\n",
+    "}"
    ]
   }
  ],
