Adding final version of jupyter notebook

--- a/Alzheimer's Disease Prediction.ipynb
+++ b/Alzheimer's Disease Prediction.ipynb
@@ -865,21 +865,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37302f7b-47b5-480d-9c52-e20e5ca6a12a",
+   "id": "8f27fc33-a6c7-40da-88d4-7745eeed7d35",
    "metadata": {},
    "source": [
-    "## EDA Summary and Key Insights\r\n",
-    "\r\n",
-    "- The dataset shows a positive Alzheimer's diagnosis rate o**35.3**. While this may seem high compared to the general population, it is consistent with the fact that this dataset includes only patients who visited a doctor for cognitive evaluation, leading to a higher proportion of diagnosed cases.\r\n",
-    "- *ge** does not show a strong or clear trend with Alzheimer's diagnosis in this dataset. The distribution of ages among diagnosed and non-diagnosed patients appears fairly similar.\r\n",
-    "\r\n",
-    "- After reviewinthe **correlation htmap**, it is evident that most variables have very low correlation with the diagnosis outcome. Only a few features show meaningful relationships with Alzheimer's diagnosis:\r\n",
-    "  - MMSE (Mini-Mental State Examination)\r\n",
-    "  - Functional Assessment\r\n",
-    "  - Behavioral Problems\r\n",
-    "  - ADL (Activities of Daily Living)\r\n",
-    "\r\n",
-    "- Based on these observations, detailed analysis (boxplots) will focus on these key features to better understand their relationship with Alzheimer's diagnosis.\r\n"
+    "## EDA Summary and Key Insights\n",
+    "\n",
+    "- The dataset shows a positive Alzheimer's diagnosis rate of **35.3**. While this may seem high compared to the general population, it is consistent with the fact that this dataset includes only patients who visited a doctor for cognitive evaluation, leading to a higher proportion of diagnosed cases.\n",
+    "- Age does not show a strong or clear trend with Alzheimer's diagnosis in this dataset. The distribution of ages among diagnosed and non-diagnosed patients appears fairly similar.\n",
+    "\n",
+    "- After reviewing the correlation heatmap, it is evident that most variables have very low correlation with the diagnosis outcome. Only a few features show meaningful relationships with Alzheimer's diagnosis:\n",
+    "  - MMSE (Mini-Mental State Examination)\n",
+    "  - Functional Assessment\n",
+    "  - Behavioral Problems\n",
+    "  - ADL (Activities of Daily Living)\n",
+    "\n",
+    "- Based on these observations, detailed analysis (boxplots) will focus on these key features to better understand their relationship with Alzheimer's diagnosis.\n"
    ]
   },
   {
@@ -1220,7 +1220,7 @@
     "\n",
     "title={Alzheimer's Disease Dataset},\n",
     "\n",
-    "url={https://www.kaggle.com/dsv/8668279},\n",
+    "url={https://www.kaggle.com/datasets/rabieelkharoua/alzheimers-disease-dataset},\n",
     "\n",
     "DOI={10.34740/KAGGLE/DSV/8668279},\n",
     "\n",
